--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .app {
-  background-color: var(--primary-color);
+  background-color: var(--white-colorr);
   font-family: var(--font-base);
 }
 
@@ -194,3 +194,13 @@
     padding: 2rem;
   }
 }
+
+// .app__progress-bar {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   height: 10px;
+//   background: rgb(0, 181, 204);
+//   transform-origin: 0%;
+// }
