--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -2,7 +2,7 @@
 #home {
   position: relative;
   //   background: var(--bg-section-home);
-  background-color: var(--white-color);
+  background-color: #caf0f8;
 }
 
 .app__header {
