--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -1,13 +1,26 @@
+.app__contact-container {
+  background-color: #caf0f8;
+  h2 {
+    font-weight: 500;
+    color: black;
+    padding-top: 2rem;
+  }
+}
 .app__footer-cards {
-  width: 60%;
+  //   width: 60%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  //   flex-wrap: wrap;
+  margin: 2em 1rem 2rem;
 
+  a {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+  }
   .app__footer-card {
-    min-width: 290px;
+    min-width: 250px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -17,11 +30,11 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #ffffff;
+    background-color: #00b4d8;
 
     transition: all 0.3s ease-in-out;
 
-    img {
+    .icons {
       width: 40px;
       height: 40px;
       margin: 0 0.7rem;
@@ -33,88 +46,15 @@
     a {
       text-decoration: none;
       font-weight: 500;
+      color: white;
     }
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
-    }
-
-    @media screen and (max-width: 450px) {
-      width: 100%;
+      box-shadow: 0 0 25px black;
     }
   }
 
   @media screen and (max-width: 768px) {
-    width: 100%;
-  }
-}
-
-.app__footer-cards .app__footer-card:last-child {
-  background-color: black;
-}
-
-.app__footer-cards .app__footer-card:last-child:hover {
-  box-shadow: 0 0 25px blue;
-}
-
-.app__footer-form {
-  width: 60%;
-  flex-direction: column;
-  margin: 1rem 2rem;
-
-  div {
-    width: 100%;
-
-    margin: 0.75rem 0;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: var(--black-color);
-
-    transition: all 0.3s ease-in-out;
-
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.95rem;
-      border: none;
-      border-radius: 7px;
-      background-color: var(--white-color);
-
-      font-family: var(--font-base);
-      color: var(--black-color);
-      outline: none;
-    }
-
-    textarea {
-      height: 170px;
-    }
-
-    &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
-    }
-  }
-
-  button {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    border: none;
-    background-color: var(--secondary-color);
-
-    font-weight: 500;
-    color: var(--white-color);
-    outline: none;
-    margin: 2rem 0 0 0;
-    font-family: var(--font-base);
-
-    transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-    cursor: pointer;
-
-    &:hover {
-      background-color: #2430af;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    width: 100%;
-    margin: 1rem 0;
+    // width: 100%;
+    flex-direction: column;
   }
 }
