--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -12,7 +12,8 @@
   justify-content: space-evenly;
   align-items: center;
   //   flex-wrap: wrap;
-  margin: 2em 1rem 2rem;
+  //   margin: 2em 1rem 2rem;
+  padding: 2rem;
 
   a {
     text-decoration: none;
