update the resources section using framer-motion

--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -1,8 +1,8 @@
 .app__contact-container {
-  background-color: #caf0f8;
+  background-color: #d7e3fc;
   h2 {
-    font-weight: 500;
-    color: black;
+    //   font-weight: 500;
+    //   color: black;
     padding-top: 2rem;
   }
 }
@@ -31,7 +31,7 @@
     padding: 1rem;
     border-radius: 10px;
     cursor: pointer;
-    background-color: #00b4d8;
+    background-color: #abc4ff;
 
     transition: all 0.3s ease-in-out;
 
