--- a/src/container/Features/Features.scss
+++ b/src/container/Features/Features.scss
@@ -22,7 +22,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
   align-items: baseline;
-  background-color: #caf0f8;
+  background-color: #d7e3fc;
   justify-content: space-evenly;
   padding: 1rem 1rem;
   padding-left: 10rem;
