--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: flex-start;
 
-  background-color: #90e0ef;
+  background-color: white;
   justify-content: space-evenly;
   padding: 1rem 1rem;
   padding-left: 10rem;
