--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .app__footer {
   display: flex;
-  background-color: #90e0ef;
+  background-color: #edf2fb;
   align-items: center;
   justify-content: space-between;
 }
