--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,6 +1,6 @@
 .app__header {
   padding: 6rem 2rem 0;
-  background-color: #caf0f8;
+  background-color: #edf2fb;
   p {
     text-align: center;
     padding-bottom: 10px;
