--- a/src/container/Resources/Resources.scss
+++ b/src/container/Resources/Resources.scss
@@ -1,12 +1,36 @@
+.app__motion-list {
+  li {
+    background-color: #abc4ff;
+    border-radius: 10px;
+    padding: 20px;
+    padding-top: 20px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    cursor: pointer;
+  }
+
+  .row {
+    width: 100%;
+    height: 8px;
+    background-color: #999;
+    border-radius: 10px;
+    margin-top: 12px;
+  }
+}
+
 .app__resources-container {
   display: flex;
-  flex-direction: column;
-  background-color: #90e0ef;
+  flex-direction: row;
+  background-color: white;
   align-items: flex-start;
-
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   @media screen and (max-width: 900px) {
     width: 100%;
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 
@@ -21,6 +45,9 @@
 
   margin-right: 5rem;
 
+  p {
+    font-weight: 500;
+  }
   @media screen and (max-width: 900px) {
     margin-right: 0;
     justify-content: center;
@@ -51,7 +78,7 @@
     }
 
     &:hover {
-      box-shadow: 0 0 25px #fef4f5;
+      box-shadow: 0 0 25px black;
     }
 
     @media screen and (min-width: 2000px) {
