--- a/src/container/Test/Scroll_test.scss
+++ b/src/container/Test/Scroll_test.scss
@@ -1,54 +1,109 @@
-.app__test-icon-circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  background: rgba(255, 255, 255, 0.9);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.app__test {
+  li {
+    background-color: #abc4ff;
+    border-radius: 10px;
+    padding: 20px;
+    // padding-top: 20px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    cursor: pointer;
+  }
+
+  // li:last-child {
+  //   margin-bottom: 0px;
+  // }
+
+  .row {
+    width: 100%;
+    height: 8px;
+    background-color: #999;
+    border-radius: 10px;
+    margin-top: 12px;
+  }
 }
 
-.app__test {
+.app__resources-container {
   display: flex;
-  background-color: rgb(237, 235, 235);
+  flex-direction: row;
+  background-color: white;
+  align-items: flex-start;
   justify-content: space-evenly;
-  padding: 1rem 1rem;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
+.app__resources-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0.5rem 0.5rem;
   padding-left: 10rem;
   padding-right: 10rem;
 
-  @media screen and (max-width: 1200px) {
-    flex-direction: column;
-    padding-left: 5rem;
-    padding-right: 5rem;
+  margin-right: 5rem;
+
+  p {
+    font-weight: 500;
   }
-  @media screen and (max-width: 450px) {
-    flex-direction: column;
+  @media screen and (max-width: 900px) {
+    margin-right: 0;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
   }
 }
 
-.app__test-icons {
-  color: dodgerblue;
-}
-
-.app__test-card {
-  display: flex;
+.app__resources-item {
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+
+  margin: 1rem;
+
+  transition: all 0.3s ease-in-out;
+
+  div {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    background-color: #fef4f5;
+
+    img {
+      width: 50%;
+      height: 50%;
+    }
+
+    &:hover {
+      box-shadow: 0 0 25px black;
+    }
+
+    @media screen and (min-width: 2000px) {
+      width: 150px;
+      height: 150px;
+    }
+
+    @media screen and (max-width: 450px) {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
   p {
-    color: var(--gray-color);
-    text-align: center;
     font-weight: 500;
+    margin-top: 0.5rem;
+    text-align: center;
   }
-  @media screen and(max-width:2000px) {
-    padding-bottom: 0rem;
-  }
-  @media screen and(max-width:1200px) {
-    padding-bottom: 1rem;
-  }
-  @media screen and(max-width:450px) {
-    padding-bottom: 2rem;
+
+  @media screen and (min-width: 2000px) {
+    margin: 1rem 2rem;
+    p {
+      margin-top: 1rem;
+    }
   }
 }
