--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -56,3 +56,101 @@
     }
   }
 }
+
+// ---------- Carousel Testing --------------
+.app__abouts-container {
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  height: auto;
+}
+.app__abouts-slideshow {
+  position: relative;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 25%;
+  padding-right: 25%;
+  overflow: hidden;
+  @media screen and(max-width: 900px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+.app__abouts-slider {
+  display: flex;
+  flex-direction: column;
+  object-fit: cover;
+  object-position: center;
+  padding-left: 20%;
+  padding-right: 20%;
+
+  align-items: center;
+  text-align: center;
+
+  p {
+    font-weight: 500;
+    // text-align: center;
+    text-align: justify;
+    // text-align: center;
+    color: grey;
+    object-fit: contain;
+  }
+}
+
+.app__abouts-slider-icons {
+  font-size: 160px;
+  margin-bottom: 10px;
+
+  color: dodgerblue;
+  background-color: white;
+  object-fit: contain;
+}
+
+.app__abouts-prevButton {
+  left: 20%;
+  translate: translate(-50%);
+  @media screen and(max-width: 1200px) {
+    left: 10%;
+  }
+  @media screen and(max-width: 800px) {
+    left: 16px;
+  }
+}
+.app__abouts-nextButton {
+  right: 20%;
+  translate: translate(-50%);
+  @media screen and(max-width: 1200px) {
+    right: 10%;
+  }
+  @media screen and(max-width: 800px) {
+    right: 16px;
+  }
+  // translate: translate(-50%);
+}
+
+.button {
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  translate: translate(-50%);
+  font-size: 16px;
+  width: 64px;
+  aspect-ratio: 1;
+  border-radius: 32px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  background-color: #abc4ff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &:hover {
+    box-shadow: 0 0 25px black;
+  }
+
+  @media screen and(max-width: 1200px) {
+    width: 42px;
+  }
+}
