--- a/src/container/Resources/Resources.scss
+++ b/src/container/Resources/Resources.scss
@@ -1,3 +1,20 @@
+.app__resources-container {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  @media screen and (max-width: 900px) {
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
 .app__motion-list {
   li {
     background-color: #abc4ff;
@@ -15,22 +32,6 @@
     background-color: #999;
     border-radius: 10px;
     margin-top: 12px;
-  }
-}
-
-.app__resources-container {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  align-items: flex-start;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  @media screen and (max-width: 900px) {
-    width: 100%;
-    flex-direction: row;
   }
 }
 
