--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -2,8 +2,10 @@
   background-color: #d7e3fc;
   h2 {
     //   font-weight: 500;
-    //   color: black;
+    color: black;
+    // border-radius: 2%;
     padding-top: 2rem;
+    font-weight: bold;
   }
 }
 .app__footer-cards {
