--- a/src/container/Features/Features.scss
+++ b/src/container/Features/Features.scss
@@ -1,4 +1,72 @@
+.app__features-slider {
+  height: 500px;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+
+  background-color: #abc4ff;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.app__features-slide-track {
+  display: flex;
+  width: calc(450px * 12);
+  animation: scroll 10s linear infinite;
+
+  &:hover {
+    animation-play-state: paused;
+  }
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-450px * 6));
+  }
+}
+
+.app__features-slide {
+  width: 450px;
+  display: relative;
+  align-items: center;
+  padding: 10px;
+  perspective: 100px;
+}
+
+.app__features-slider::before,
+.app__features-slider::after {
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 15%;
+  z-index: 2;
+}
+
+.app__features-slider::before {
+  left: 0;
+  top: 0;
+}
+.app__features-slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+
 .app__features-icon-circle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
   width: 60px;
   height: 60px;
   border-radius: 100%;
@@ -16,32 +84,6 @@
     height: 85px;
   }
 }
-
-.app__features {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
-  align-items: baseline;
-  background-color: #d7e3fc;
-  justify-content: space-evenly;
-  padding: 1rem 1rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
-
-  @media screen and (max-width: 1200px) {
-    display: flex;
-    flex-direction: column;
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-  @media screen and (max-width: 450px) {
-    display: flex;
-    flex-direction: column;
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
 .app__features-icons {
   color: dodgerblue;
   width: 55%;
@@ -49,22 +91,44 @@
   object-fit: cover;
 }
 
+/* This img should be modify: for example change the name of img to motion.div*/
+
+.app__feature-card-hover-effect {
+  border-radius: 20px;
+  width: 250px;
+
+  transition: transform 1s;
+  &:hover {
+    transform: translateZ(20px);
+  }
+}
+
 .app__features-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  h2 {
+    padding-top: 5rem;
+    text-align: center;
+  }
   p {
     color: var(--gray-color);
-    text-align: justify;
+    text-align: center;
     font-weight: 500;
-    padding-top: 1rem;
+    padding-top: 2rem;
   }
   @media screen and(max-width:2000px) {
     padding-bottom: 0rem;
   }
   @media screen and(max-width:1200px) {
     padding-bottom: 1rem;
+    h2 {
+      margin-top: 1rem;
+    }
+    p {
+      padding-top: 2rem;
+    }
   }
   @media screen and(max-width:450px) {
     padding-bottom: 2rem;
