--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -44,8 +44,8 @@
 
   p {
     font-weight: 500;
-    text-align: justify;
-    color: balck;
+    text-align: center;
+    color: black;
   }
   //   for extra large devices
   @media screen and (min-width: 2000px) {
@@ -77,6 +77,7 @@
   }
 }
 .app__abouts-slider {
+  height: 450px;
   display: flex;
   flex-direction: column;
   object-fit: cover;
@@ -90,10 +91,16 @@
   p {
     font-weight: 500;
     // text-align: center;
-    text-align: justify;
+    text-align: center;
     // text-align: center;
     color: grey;
     object-fit: contain;
+  }
+
+  @media screen and(max-width: 900px) {
+    height: auto;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
 
@@ -130,8 +137,9 @@
 
 .button {
   position: absolute;
-  top: 50%;
-  bottom: 50%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   translate: translate(-50%);
   font-size: 16px;
   width: 64px;
