--- a/src/container/Resources/Resources.scss
+++ b/src/container/Resources/Resources.scss
@@ -17,7 +17,7 @@
 
 .app__motion-list {
   li {
-    background-color: #abc4ff;
+    background-color: #ccdbfd;
     border-radius: 10px;
     padding: 20px;
     padding-top: 20px;
